# FuBAR

./: Cargo.toml  README.md
benches/: ch1.rs
src/: ch1.rs  ch2.rs  lib.rs
src/other/: lib.rs
src/other/ch01/: lesson02.rs  mod.rs
src/other/rosalind/: cg.rs  mod.rs
