[package]
name = "bair"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
lazy_static = "1.4.0"
many-to-many = "0.1.7"
pcre2 = "0.2.3"
pulp = "0.4.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"
reqwest = { version = "0.11.12", features = ["blocking"] }

[[bench]]
name = "ch1"
harness = false
